--- a/css/style.css
+++ b/css/style.css
@@ -432,6 +432,7 @@ h3 {
     height: 400px;
     color: white;
     background-color: #111;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -462,20 +463,26 @@ h3 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg, #000000, #ffffff);
+    background: linear-gradient(25deg, #000000, #ffffff);
     filter: blur(30px);
+}
+
+.containerr .box:nth-child(1)::before,
+.containerr .box:nth-child(1)::after
+{
+    background: linear-gradient(315deg, #000000, #f7f421);
 }
 
 .containerr .box:nth-child(2)::before,
 .containerr .box:nth-child(2)::after
 {
-    background: linear-gradient(315deg, #000000, #ffffff);
+    background: linear-gradient(315deg, #000000, #2693ff);
 }
 
 .containerr .box:nth-child(3)::before,
 .containerr .box:nth-child(3)::after
 {
-    background: linear-gradient(315deg, #000000, #ffffff);
+    background: linear-gradient(315deg, #000000, #22ff52);
 }
 
 
